# moviedb

./: .env-default  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
benchmark/: export_baseline.py  import_baseline.py  pyproject.toml  query_recommends.py  user_recommends.py
benchmark/baseline/: .gitkeep
nginx/: error.html  moviedb.conf
src/: streamlit_app.py
src/core/: settings.py  urls.py
src/misc/: combine_jsons.py
src/misc/utils/: embedding.py
src/movies/: admin.py  models.py  search.py
src/movies/management/commands/: build_embeddings.py  import_imdb.py  import_streaming_availability.py
src/movies/migrations/: 0001_initial.py  0002_motn.py
src/movies/models/: __init__.py  imdb.py  motn.py  user.py
